Feb 20 Normal Distributions

--- a/NPS/MS-Summer-Acadmey-2017.slides.html
+++ b/NPS/MS-Summer-Acadmey-2017.slides.html
@@ -13536,7 +13536,7 @@ a.anchor-link {
 <h2 id="Type-Mapper!">Type Mapper!<a class="anchor-link" href="#Type-Mapper!">&#182;</a></h2>
 </div>
 </div>
-</div></section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[212]:</div>
@@ -13563,7 +13563,7 @@ a.anchor-link {
 <h2 id="Let's-Make-a-2016-DataFrame">Let's Make a 2016 DataFrame<a class="anchor-link" href="#Let's-Make-a-2016-DataFrame">&#182;</a></h2>
 </div>
 </div>
-</div></section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[221]:</div>
@@ -13576,7 +13576,7 @@ a.anchor-link {
 </div>
 </div>
 
-</div></section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[222]:</div>
@@ -14208,12 +14208,27 @@ a.anchor-link {
 </div>
 </div>
 </div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Questions:">Questions:<a class="anchor-link" href="#Questions:">&#182;</a></h3><ul>
+<li>How many promoters, passives, and detractors are there in both years? How do the scores differ by year?</li>
+<li>What track of students had the best experience at the summer academy? What about the worst experience?</li>
+<li>Did students feel as though the pacing increased as the program went on?</li>
+<li>Which location had the best overall experience?</li>
+<li>Did students at the NY location have a better or worse expeience as the program went on?</li>
+</ul>
+
+</div>
+</div>
+</div></section></section><section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[242]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">the_truth</span><span class="p">[</span><span class="s2">&quot;Track&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">value_counts</span><span class="p">()</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">kind</span><span class="o">=</span><span class="s1">&#39;bar&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&#39;&#39;&#39;People like making apps&#39;&#39;&#39;</span>
+<span class="n">the_truth</span><span class="p">[</span><span class="s2">&quot;Track&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">value_counts</span><span class="p">()</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">kind</span><span class="o">=</span><span class="s1">&#39;bar&#39;</span><span class="p">)</span>
 </pre></div>
 
     </div>
